third_party/move/move-compiler-v2/tests/more-v1/parser/unexpected_token_after_ability_function_constraint.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/unexpected_token_after_ability_function_constraint.move:4:21
  │
4 │     fun foo<T: copy & drop>() {}
  │                     ^
  │                     │
  │                     Unexpected '&'
  │                     Expected one of: '+', '>', or ','
